# project_euler

./: CMakeLists.txt  LICENSE  README.md  naive_problem1.c++  optimal_problem1.c++  smart_problem1.c++  ultimate_problem1.c++
